# playlists

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CHANGES.md  GNUmakefile  LICENSE  README.md  default.nix  playlist.hs  playlists.cabal  playlists.nix  stack.nix  stack.yaml
.github/workflows/: tests.yml
nix/: sources.json
src/Text/: Playlist.hs
src/Text/Playlist/: Types.hs
src/Text/Playlist/Internal/: Attoparsec.hs  Format.hs  ReadWrite.hs  Resolve.hs
src/Text/Playlist/M3U/: Reader.hs  Writer.hs
src/Text/Playlist/PLS/: Reader.hs  Writer.hs
test/: Examples.hs  Helper.hs  M3USpec.hs  Main.hs  PLSSpec.hs  ResolveSpec.hs  aa.m3u  ab.m3u  doctest.hs  hlint.hs  hp.m3u  nested.m3u  pig.pls  sa.pls  utf8.pls
util/: playlist.hs
